--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -1,1 +1,12 @@
-$small-font-size: 20px
+$font-asap: 'Asap', sans-serif
+$font-lato: 'Lato', sans-serif
+
+%flex
+  display: flex
+  flex-wrap: wrap
+
+%wrapper
+  max-width: 1170px
+  padding: 0 15px
+  margin: 0 auto
+  box-sizing: border-box
