section my skills has been done

--- a/assets/sass/_services.sass
+++ b/assets/sass/_services.sass
@@ -1,4 +1,4 @@
-@import "variables"
+
 .section__services
   background-color: #f6f6f6
   padding-top: 94px
@@ -34,7 +34,7 @@
     width: 77px
     height: 77px
     opacity: 0.8
-    margin: 0 auto
+    margin: 0 auto 13px
   &_subtitle
     color: #4d4d4d
     font-family: $font-asap
@@ -47,34 +47,34 @@
     width: 76px
     height: 62px
     opacity: 0.8
-    margin: 0 auto
+    margin: 0 auto 13px
   &_img-wireframes
     background: url("../img/Wireframes.png") no-repeat center/cover
   &_img-3
     width: 67px
     height: 75px
     opacity: 0.8
-    margin: 0 auto
+    margin: 0 auto 13px
   &_img-look-feel
     background: url("../img/looks and feel.png") no-repeat center/cover
   &_img-4
     width: 90px
     height: 75px
     opacity: 0.8
-    margin: 0 auto
+    margin: 0 auto 13px
   &_img-delivery
     background: url("../img/delivery.png") no-repeat center/cover
   &_img-5
     width: 57px
     height: 81px
     opacity: 0.8
-    margin: 0 auto
+    margin: 0 auto 13px
   &_img-testing
     background: url("../img/user-testing.png") no-repeat center/cover
   &_img-6
     width: 76px
     height: 76px
     opacity: 0.8
-    margin: 0 auto
+    margin: 0 auto 13px
   &_img-support
     background: url("../img/support.png") no-repeat center/cover
