--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,8 @@
 @import "variables"
+@import "layout_styles"
 @import "header"
 @import "setings"
 @import "about-me"
 @import "services"
+@import "my-skills"
+@import "portfolio"
