--- a/assets/sass/_elements.sass
+++ b/assets/sass/_elements.sass
@@ -8,6 +8,7 @@
     display: inline-block
     box-sizing: border-box
     text-align: center
+    margin-right: 22px
   &_item
     max-width: 260px
     width: 100%
