--- a/assets/sass/_contact.sass
+++ b/assets/sass/_contact.sass
@@ -1,9 +1,10 @@
 .section__contact
   background: url("../img/contact_bg.png")
+  background-size: cover
   padding-top: 121px
   &_title-top
     color: #d4d4d4
-    font-family: "Nirmala UI"
+    font-family: "Nirmala UI" ,sans-serif
     font-size: 22px
     font-weight: 400
     text-align: center
@@ -39,7 +40,7 @@
       font-size: 16px
       font-weight: 400
     .textarea
-      margin: 0 auto
+      margin: 0 auto 30px
       padding: 15px
       display: block
       width: 850px
@@ -49,3 +50,29 @@
       font-family: $font-asap
       font-size: 16px
       font-weight: 400
+  &_link
+    display: flex
+    justify-content: center
+  &_button
+    color: #4d4d4d
+    font-family: $font-asap
+    font-size: 16px
+    font-weight: 500
+    letter-spacing: 0.96px
+    padding: 19px 45px 19px 31px
+    text-decoration: none
+    box-sizing: border-box
+    display: inline-block
+    border: 1px solid black
+    box-shadow: 0 18px 27px 2px rgba(0, 0, 0, 0.1)
+    background-color: #ffffff
+  &_up-link
+    width: 100%
+    display: flex
+    justify-content: flex-end
+  &_up-button
+    background: url("../img/up-button.png")
+    width: 65px
+    height: 41px
+    box-shadow: 0 18px 27px 2px rgba(0, 0, 0, 0.1)
+
