--- a/assets/sass/_variables.sass
+++ b/assets/sass/_variables.sass
@@ -1,5 +1,6 @@
 $font-asap: 'Asap', sans-serif
 $font-lato: 'Lato', sans-serif
+$font-awesome: 'Font Awesome' , sans-serif
 
 %flex
   display: flex
