footer has been done,but text is not centered

--- a/assets/sass/_about-me.sass
+++ b/assets/sass/_about-me.sass
@@ -10,6 +10,7 @@
    font-family: $font-asap
    font-size: 22px
    font-weight: 400
+   letter-spacing: 7.91px
    margin-bottom: 7px
 
   &_border
