--- a/assets/sass/_portfolio.sass
+++ b/assets/sass/_portfolio.sass
@@ -9,6 +9,8 @@
     font-size: 22px
     font-weight: 400
     text-align: center
+    letter-spacing: 7.91px
+    margin-bottom: 7px
   &_border
     max-width: 60px
     height: 4px
