--- a/assets/sass/_contact.sass
+++ b/assets/sass/_contact.sass
@@ -1,7 +1,9 @@
-.section__contact
+.background-contact-footer
   background: url("../img/contact_bg.png")
   background-size: cover
+.section__contact
   padding-top: 121px
+  margin-bottom: 58px
   &_title-top
     color: #d4d4d4
     font-family: "Nirmala UI" ,sans-serif
@@ -73,6 +75,7 @@
   &_up-button
     background: url("../img/up-button.png")
     width: 65px
-    height: 41px
-    box-shadow: 0 18px 27px 2px rgba(0, 0, 0, 0.1)
+    height: 51px
+    margin-bottom: 58px
+
 
