--- a/assets/sass/_hero.sass
+++ b/assets/sass/_hero.sass
@@ -1,53 +1,7 @@
-.background
+.section__hero
+  //text-decoration: none
   background-image: url("../img/background-img.png")
   background-size: cover
-.container__header
-  padding-top: 31px
-  padding-bottom: 24px
-.logo-nav__header
-  display: flex
-  justify-content: space-between
-  align-self: stretch
-.logo__header
-  text-decoration: none
-  &-link
-   color: #000
-   text-decoration: none
-  &-img
-    max-width: 24px
-    max-height: 24px
-    margin-left: 29px
-    margin-bottom: 5px
-  &-title
-   font-size: 14px
-   margin: 0 0
-  &-text
-    font-size: 4px
-    text-align: center
-
-.nav
-  &-list
-    @extend %flex
-    list-style: none
-    display: flex
-    justify-content: space-between
-  &-item
-    margin: 0 15px
-  &-link
-    text-decoration: none
-    font-family: $font-asap
-    font-size: 16px
-    font-weight: 400
-    color: #4d4d4d
-    &:hover
-      transition: 0.3s
-      border-bottom: 2px solid #4d4d4d
-
-.section__hero
-  text-decoration: none
-  height: 670px
-  background-image: url("../img/background-img.png")
-  //background-size: cover
   &-flex
     display: flex
     justify-content: space-between
@@ -83,7 +37,7 @@
   box-sizing: border-box
   display: inline-block
   &:hover
-   background-color: #ffffff
+    background-color: #ffffff
 
 .button-hm
   text-decoration: none
@@ -96,27 +50,3 @@
   display: inline-block
   &:hover
     background-color: #ffffff
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
