has been done all properties for this layout

--- a/assets/sass/_testimonials.sass
+++ b/assets/sass/_testimonials.sass
@@ -37,6 +37,7 @@
     height: 159px
   &_block-description
     margin-left: 31px
+    margin-top: 31px
   &_block-title
     max-width: 172px
     opacity: 0.9
@@ -64,6 +65,7 @@
     font-weight: 400
   &_cube
     display: flex
+    justify-content: center
   &_cube-1,&_cube-3
     width: 13px
     height: 13px
