--- a/assets/sass/_footer.sass
+++ b/assets/sass/_footer.sass
@@ -32,7 +32,7 @@
   &_text
     box-sizing: border-box
     align-self: center
-    //margin: 0 auto
+    margin-left: 260px
     color: #d4d4d4
     font-family: Montserrat , sans-serif
     font-size: 16px
