--- a/assets/sass/_portfolio.sass
+++ b/assets/sass/_portfolio.sass
@@ -39,6 +39,8 @@
   &_img
     width: 355px
     height: 318px
+    box-shadow: 0 0 37px 12px rgba(0, 0, 0, 0.15)
+    background-color: #212121
   &_img-1
     background: url("../img/portfolio-1.png") no-repeat center/cover
   &_img-2
@@ -51,6 +53,12 @@
     background: url("../img/porfolio-5.png") no-repeat center/cover
   &_img-6
     background: url("../img/portfolio-6.png") no-repeat center/cover
+  &_awesome
+    position: absolute
+    padding: 130px 150px
+    &:hover
+      background-color: #4d4d4d
+      opacity: 0.1
   &_link
     display: flex
     justify-content: center
